--- a/YSLib/YSMeetingResources.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -428,6 +428,7 @@
 "Prompt.DisableCamera" = "攝像頭被禁用";
 "Prompt.CanotOpenCamera" = "打開攝像頭失敗";
 "Prompt.CameraOccupied" = "攝像頭被占用";
+"Prompt.BrowserCanotSupport" = "瀏覽器不支持";
 
 "Prompt.VideoLoading" = "視頻加載中";
 "Prompt.VideoBuffering" = "正在緩沖視頻";
