設備打開失敗

--- a/YSLib/YSMeetingResources.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/zh-Hans.lproj/Localizable.strings
@@ -423,7 +423,7 @@
 
 "Prompt.NoCamera" = "未发现摄像头";
 "Prompt.DisableCamera" = "摄像头被禁用";
-"Prompt.CanotOpenCamera" = "打开摄像头失败";
+"Prompt.CanotOpenCamera" = "设备打开失败";
 "Prompt.CameraOccupied" = "摄像头被占用";
 "Prompt.BrowserCanotSupport" = "浏览器不支持";
 
