--- a/YSLib/YSMeetingResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/en.lproj/Localizable.strings
@@ -185,6 +185,17 @@
 "Prompt.timeoutReadyEnd.three" = "minutes.";
 
 "Title.DocumentList"        = "Course Lib";
+"Title.ToolBox"             = "Tools";
+"Title.AroundLayout"        = "Tile";
+"Title.VideoLayout"         = "Synthetical";
+"Title.Polling"             = "Carousel";
+"Title.AllNoAudio"          = "Mute all";
+"Title.AllAudio"            = "Unmute all";
+"Title.Message"             = "Messages";
+"Title.Exit"                = "Quit";
+"Title.ChangeCamera"        = "Reverse camera";
+
+
 "Title.MediaList"           = "Media";
 "Title.ControlList"         = "Operation";
 "Title.TrophySend"          = "Send Cup";
