资源文件繁体字 多分号

--- a/YSLib/YSResources.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -194,7 +194,7 @@
 "Title.AllAudio"            = "取消靜音";
 "Title.Message"             = "消息";
 "Title.Exit"                = "退出";
-"Title.ChangeCamera"        = "翻轉攝像頭";;
+"Title.ChangeCamera"        = "翻轉攝像頭";
 
 
 
