举手，聊天视图更改

--- a/YSLib/YSResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/en.lproj/Localizable.strings
@@ -284,6 +284,7 @@
 "Label.Authorized" = "Operation";
 "Label.CancelAuthorized" = "No Operation";
 "Label.RaisingHands" = "Raising hands";
+"Label.RaisingHandsTip" = "hold on for rise hand";
 "Label.Ban" = "Ban";
 "Label.Remove" = "Remove";
 
