--- a/YSLib/YSMeetingResources.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -58,6 +58,7 @@
 "Login.RoomIdPlaceHolder"    = "房間號";
 "Login.nickName"  = "昵稱";
 "Login.Role"      = "角色";
+"Login.Seting"      = "设置";
 
 // State
 "State.NetworkState" = "網絡狀態";
@@ -285,6 +286,7 @@
 "Label.Authorized" = "授權";
 "Label.CancelAuthorized" = "取消授權";
 "Label.RaisingHands" = "舉手";
+"Label.RaisingHandsTip" = "舉手請長按";
 "Label.Ban" = "禁言";
 "Label.Remove" = "移除";
 
