答题器 添加选项 删除选项 英文

--- a/YSLib/YSMeetingResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/en.lproj/Localizable.strings
@@ -333,8 +333,8 @@
 "tool.xiaobaiban"   = "Whiteboard";
 
 "tool.fabudati"   = "Release";
-"tool.tianjia"   = "Add";
-"tool.shanchu"   = "Delete";
+"tool.tianjia"   = "add option";
+"tool.shanchu"   = "reduce option";
 "tool.zhengquedaan"   = "Correct";
 "tool.datirenshu"   = "Answer number";
 "tool.ren"   = "";
