--- a/YSLib/YSResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/en.lproj/Localizable.strings
@@ -334,8 +334,8 @@
 "tool.xiaobaiban"   = "Whiteboard";
 
 "tool.fabudati"   = "Release";
-"tool.tianjia"   = "Add";
-"tool.shanchu"   = "Delete";
+"tool.tianjia"   = "add option";
+"tool.shanchu"   = "reduce option";
 "tool.zhengquedaan"   = "Correct";
 "tool.datirenshu"   = "Answer number";
 "tool.ren"   = "";
