修改密码添加成功的弹框

--- a/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
@@ -69,3 +69,6 @@
 
 "Polling.Time" = "rotation time";
 "Polling.second" = "Seconds / times";
+
+"Alert.prompt" = "Prompt";
+"Alert.passwordSucceed" = "Password changed successfully, please login again";
