--- a/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hans.lproj/Localizable.strings
@@ -68,3 +68,6 @@
 "Prompt.OnlineSchool_lessons" = "共%@节";
 "Polling.Time" = "轮播时间";
 "Polling.second" = "秒/次";
+
+"Alert.prompt" = "温馨提示";
+"Alert.passwordSucceed" = "密码修改成功，请重新登录账号";
