ZHIBOXBK-1021  IOSPAD学生奖杯数量显示被遮挡部分 ZHIBOXBK-1031  举手按钮太小，并且举手/长按举手 缺少提示

--- a/YSLib/YSMeetingResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/en.lproj/Localizable.strings
@@ -284,7 +284,8 @@
 "Label.Authorized" = "Operation";
 "Label.CancelAuthorized" = "No Operation";
 "Label.RaisingHands" = "Raising hands";
-"Label.RaisingHandsTip" = "hold on for rise hand";
+"Label.RaisingHandsTip" = "Hold on for rise hand";
+"Label.RaisingHandsClickTip" = "Raising Hands";
 "Label.Ban" = "Ban";
 "Label.Remove" = "Remove";
 
