--- a/YSLib/YSResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/en.lproj/Localizable.strings
@@ -285,7 +285,8 @@
 "Label.Authorized" = "Operation";
 "Label.CancelAuthorized" = "No Operation";
 "Label.RaisingHands" = "Raising hands";
-"Label.RaisingHandsTip" = "hold on for rise hand";
+"Label.RaisingHandsTip" = "Hold on for rise hand";
+"Label.RaisingHandsClickTip" = "RaisHing Hands";
 "Label.Ban" = "Ban";
 "Label.Remove" = "Remove";
 
