--- a/YSLib/YSResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/en.lproj/Localizable.strings
@@ -382,6 +382,7 @@
 "Label.ChatToMe" = "chat to me";
 "Label.ChatList" = "Private chat list";
 "Label.Lucky" = "Luckying...";
+"Label.LuckyResult" = "List of awards";
 "Label.TeacherState" = "Teacher entered room, please wait";
 "Label.AnchorState" = "Lecturer entered room, please wait";
 
