ZHIBOXBK-1087 -- 直播和单课件中的白板课件，文案调整为 黑板 英文是 blackboard YSZB-524 -- 禁止聊天和提问时，蒙层显示不对，参照附件ui

--- a/YSLib/YSMeetingResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/en.lproj/Localizable.strings
@@ -331,7 +331,7 @@
 "tool.zhuanpan"   = "Rotary";
 "tool.jishiqi"   = "Timer";
 "tool.qiangdaqi"   = "Vies";
-"tool.xiaobaiban"   = "Whiteboard";
+"tool.xiaobaiban"   = "Blackboard";
 
 "tool.fabudati"   = "Release";
 "tool.tianjia"   = "add option";
