--- a/YSLib/YSMeetingResources.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -211,7 +211,7 @@
 "Button.remindKnow"         = "我知道了";
 "Prompt.timeoutEnd"         = "房間即將關閉";
 
-"Title.whiteBoard"          = "白板";
+"Title.whiteBoard"          = "黑板";
 "Prompt.CanotOn"            = "該學生的音視頻設備不可用。有可能是自行禁用了設備。請提醒學生啟用設備。";
 
 "Prompt.FinishClass"        = "您確認要結束會議嗎?";
@@ -333,7 +333,7 @@
 "tool.zhuanpan"   = "轉盤";
 "tool.jishiqi"   = "計時器";
 "tool.qiangdaqi"   = "搶答器";
-"tool.xiaobaiban"   = "小白板";
+"tool.xiaobaiban"   = "小黑板";
 
 "tool.fabudati"   = "發布答題";
 "tool.tianjia"   = "添加選項";
