ZHIBOXBK-1099 老师设置全体静音以后，需要修改为该上台学生的音频 icon 置灰 1V1和1v多都需要修改

--- a/YSLib/YSMeetingResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/en.lproj/Localizable.strings
@@ -127,6 +127,7 @@
 "Button.CancleHandsup"= "Cancel your hands";
 "Button.OpenAudio"          = "Audio on";
 "Button.CloseAudio"         = "Audio off";
+"Button.MutingAudio"        = "Muting";
 "Button.OpenVideo"          = "Video on";
 "Button.CloseVideo"         = "Video off";
 "Button.OpenMirror"          = "Mirror";
