--- a/YSLib/YSResources.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/zh-Hans.lproj/Localizable.strings
@@ -53,7 +53,7 @@
 "Prompt.networkWIFI" = "您正处于移动网络环境下，将要使用流量播放";
 //login
 "Login.Enter" = "登录";
-"Login.EnterRoom" = "进入";
+"Login.EnterRoom" = "进入房间";
 "Login.RoomIdPlaceHolder"    = "房间号";
 "Login.nickName" = "昵称";
 "Login.Role"      = "角色";
