--- a/YSLib/YSResources.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -54,7 +54,7 @@
 "Prompt.networkWIFI" = "您正處於移動網路環境下，將要使用流量播放";
 //login
 "Login.Enter" = "登入";
-"Login.EnterRoom" = "進入";
+"Login.EnterRoom" = "進入房間";
 "Login.RoomIdPlaceHolder"    = "房間號";
 "Login.nickName"  = "昵稱";
 "Login.Role"      = "角色";
