用户协议中英文适配

--- a/YSLib/YSResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/en.lproj/Localizable.strings
@@ -433,6 +433,11 @@
 "EyeProtection.Btnsetup" = "Eye protection";
 
 
+"Agreement.User"        = "User Agreement";
+"Agreement.Privacy"     = "Privacy Policy";
+"Agreement.Agree"       = "Have read and agreed to the Privacy Policy and User Agreement";
+"Agreement.Alert"       = "Please read carefully and check the privacy policy and user agreement";
+
 "Permissions.notice" = "notice";
 "Permissions.KickedOutMembers" = "Are you sure you want to kick the member out of the room？";
 
