--- a/YSLib/YSResources.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/zh-Hans.lproj/Localizable.strings
@@ -429,6 +429,11 @@
 "EyeProtection.BtnKnow" = "我知道了";
 "EyeProtection.Btnsetup" = "护眼设置";
 
+"Agreement.User"        = "用户协议";
+"Agreement.Privacy"     = "隐私政策";
+"Agreement.Agree"       = "已阅读并同意《隐私政策》和《用户协议》";
+"Agreement.Alert"       = "请仔细阅读并勾选《隐私政策》和《用户协议》";
+
 "Permissions.notice" = "提醒";
 "Permissions.KickedOutMembers" = "您确定要将该成员踢出房间吗？";
 
