--- a/YSLib/YSResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/en.lproj/Localizable.strings
@@ -478,3 +478,5 @@
 "Button.Loading" = "loading";
 "Polling.Time" = "rotation time";
 "Polling.second" = "Seconds / times";
+
+"SmallBoard_DeletePictureTag" = "Whether to delete the picture on the chalkboard";
