--- a/YSLib/YSResources.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -472,3 +472,5 @@
 "Button.Loading" = "加載中";
 "Polling.Time" = "輪播時間";
 "Polling.second" = "秒/次";
+
+"SmallBoard_DeletePictureTag" = "是否刪除小黑板上的圖片";
