优先级-中：4.【线上-移动端】优化隐私政策和用户协议的同意方式为“登录即同意用户协议和隐私政策”

--- a/YSLib/YSResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/en.lproj/Localizable.strings
@@ -436,7 +436,7 @@
 
 "Agreement.User"        = "User Agreement";
 "Agreement.Privacy"     = "Privacy Policy";
-"Agreement.Agree"       = "Have read and agreed to the Privacy Policy and User Agreement";
+"Agreement.Agree"       = "By entering the room, you agree to the Privacy Policy and User Agreement";
 "Agreement.Alert"       = "Please read carefully and check the privacy policy and user agreement";
 
 "Permissions.notice" = "notice";
