--- a/YSLib/YSMeetingResources.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -431,8 +431,8 @@
 
 "Agreement.User"        = "用戶協議";
 "Agreement.Privacy"     = "隱私政策";
-//"Agreement.Agree"       = "進入房間即代表你已同意《隱私政策》和《用戶協議》";
-"Agreement.Agree"       = "已閱讀並同意《隱私政策》和《用戶協議》";
+"Agreement.Agree"       = "進入房間即代表你已同意《隱私政策》和《用戶協議》";
+//"Agreement.Agree"       = "已閱讀並同意《隱私政策》和《用戶協議》";
 
 "Agreement.Alert"       = "請仔細閱讀並勾選《隱私政策》和《用戶協議》";
 
