--- a/YSLib/YSResources.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/zh-Hans.lproj/Localizable.strings
@@ -432,8 +432,8 @@
 
 "Agreement.User"        = "用户协议";
 "Agreement.Privacy"     = "隐私政策";
-//"Agreement.Agree"       = "进入房间即代表你已同意《隐私政策》和《用户协议》";
-"Agreement.Agree"       = "已阅读并同意《隐私政策》和《用户协议》";
+"Agreement.Agree"       = "进入房间即代表你已同意《隐私政策》和《用户协议》";
+//"Agreement.Agree"       = "已阅读并同意《隐私政策》和《用户协议》";
 
 "Agreement.Alert"       = "请仔细阅读并勾选《隐私政策》和《用户协议》";
 
