掷骰子文件名更改

--- a/YSLib/YSResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/en.lproj/Localizable.strings
@@ -481,3 +481,5 @@
 "Polling.second" = "Seconds / times";
 
 "SmallBoard_DeletePictureTag" = "Whether to delete the picture on the chalkboard";
+
+"title.Dice" = "Dice";
