添加切换布局的pop，双师信令合并到layout信令中

--- a/YSLib/YSResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/en.lproj/Localizable.strings
@@ -190,8 +190,11 @@
 
 "Title.DocumentList"        = "Lib";
 "Title.ToolBox"             = "Tools";
-"Title.AroundLayout"        = "Layout";
-"Title.VideoLayout"         = "Layout";
+"Title.ChangeLayout"        = "Change";
+"Title.AroundLayout"        = "Around";
+"Title.VideoLayout"         = "Video";
+"Title.DoubleLayout"        = "Double";
+"Title.FocusLayout"         = "Focus";
 "Title.Polling"             = "Rot";
 "Title.AllNoAudio"          = "Mute";
 "Title.AllAudio"            = "Unmute";
