--- a/YSLib/YSResources.bundle/ja.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/ja.lproj/Localizable.strings
@@ -146,6 +146,7 @@
 "Title.ToolBox"             = "工具箱";
 "Title.AroundLayout"        = "平铺布局";
 "Title.VideoLayout"         = "综合布局";
+"Title.DoubleLayout"        = "双师布局";
 "Title.Polling"             = "轮播";
 "Title.AllNoAudio"          = "全体静音";
 "Title.AllAudio"            = "取消静音";
