--- a/YSLib/YSMeetingResources.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -199,7 +199,7 @@
 "Title.Message"             = "消息";
 "Title.Exit"                = "退出";
 "Title.ChangeCamera"        = "翻轉攝像頭";
-
+"Title.VideoAdjustment"     = "視頻調整";
 
 
 
