--- a/YSLib/YSResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/en.lproj/Localizable.strings
@@ -202,7 +202,7 @@
 "Title.Message"             = "Chat";
 "Title.Exit"                = "Quit";
 "Title.ChangeCamera"        = "Switch";
-
+"Title.VideoAdjustment"     = "VideoAdjustment";
 
 
 "Title.MediaList"           = "Media";
