--- a/YSLib/YSResources.bundle/ja.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/ja.lproj/Localizable.strings
@@ -154,7 +154,7 @@
 "Title.Message"             = "消息";
 "Title.Exit"                = "退出";
 "Title.ChangeCamera"        = "切换摄像头";
-
+"Title.VideoAdjustment"     = "视频调整";
 
 
 
