--- a/YSLib/YSMeetingResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/en.lproj/Localizable.strings
@@ -482,3 +482,6 @@
 "Polling.second" = "Seconds / times";
 
 "SmallBoard_DeletePictureTag" = "Whether to delete the picture on the chalkboard";
+
+"KeystoneCorrection.Tip" = "Single finger correction image";
+"KeystoneCorrection.Return" = "Return";
