--- a/YSLib/YSResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/en.lproj/Localizable.strings
@@ -487,3 +487,6 @@
 "SmallBoard_DeletePictureTag" = "Whether to delete the picture on the chalkboard";
 
 "title.Dice" = "Dice";
+
+"KeystoneCorrection.Tip" = "Single finger correction image";
+"KeystoneCorrection.Return" = "Return";
