--- a/YSLib/YSMeetingResources.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/zh-Hans.lproj/Localizable.strings
@@ -477,3 +477,6 @@
 
 
 "SmallBoard_DeletePictureTag" = "是否删除小黑板上的图片";
+
+"KeystoneCorrection.Tip" = "单指拉伸进行矫正";
+"KeystoneCorrection.Return" = "返回";
