--- a/YSLib/YSMeetingResources.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -478,3 +478,6 @@
 "Polling.second" = "秒/次";
 
 "SmallBoard_DeletePictureTag" = "是否刪除小黑板上的圖片";
+
+"KeystoneCorrection.Tip" = "單指拉伸進行矯正";
+"KeystoneCorrection.Return" = "返回";
