--- a/YSLib/YSResources.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/zh-Hans.lproj/Localizable.strings
@@ -484,3 +484,6 @@
 "SmallBoard_DeletePictureTag" = "是否删除小黑板上的图片";
 
 "title.Dice" = "骰子";
+
+"KeystoneCorrection.Tip" = "单指拉伸进行矫正";
+"KeystoneCorrection.Return" = "返回";
