--- a/YSLib/YSResources.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -482,3 +482,6 @@
 "SmallBoard_DeletePictureTag" = "是否刪除小黑板上的圖片";
 
 "title.Dice" = "骰子";
+
+"KeystoneCorrection.Tip" = "單指拉伸進行矯正";
+"KeystoneCorrection.Return" = "返回";
