--- a/YSLib/YSMeetingResources.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -480,4 +480,5 @@
 "SmallBoard_DeletePictureTag" = "是否刪除小黑板上的圖片";
 
 "KeystoneCorrection.Tip" = "單指拉伸進行矯正";
-"KeystoneCorrection.Return" = "返回";
+"KeystoneCorrection.Finish" = "完成";
+"KeystoneCorrection.Reset" = "還原";
