--- a/YSLib/YSResources.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/zh-Hans.lproj/Localizable.strings
@@ -486,4 +486,5 @@
 "title.Dice" = "骰子";
 
 "KeystoneCorrection.Tip" = "单指拉伸进行矫正";
-"KeystoneCorrection.Return" = "返回";
+"KeystoneCorrection.Finish" = "完成";
+"KeystoneCorrection.Reset" = "还原";
